# traccar-geocoder

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh
.github/workflows/: docker.yml
builder/: CMakeLists.txt
builder/src/: build_index.cpp
search/: Cargo.toml  Dockerfile
search/src/: admin.rs  binary.rs  handler.rs  indexer.rs  main.rs  tokenizer.rs
server/src/: main.rs
