[package]
name = "search-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
s2 = "0.0.13"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
